# PaintingExhibition

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: db.py  main.py  models.py
app/api/health/: routes.py
app/api/paintings/: crud.py  routes.py
scripts/: ci_smoke_test.py  publish_instructions.ps1  smoke_test.py
tests/: conftest.py  test_health.py  test_paintings.py
