[tool.poetry]
name = "PaintingExhibition"
version = "0.1.0"
description = "Painting gallery REST API"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras=["standard"], version = "^0.22.0"}
sqlmodel = "^0.0.8"
httpx = {extras=["http2"], version = "^0.24.0"}
pytest = "^7.4.0"
pytest-asyncio = "^0.22.0"
coverage = "^7.0"

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"